fix: исправить ошибки проверки.